--- a/opt/chrome/userContent.css
+++ b/opt/chrome/userContent.css
@@ -19,7 +19,7 @@
 	--red:         #d26161;
 	--purple:      #b887cc;
 	--blue:        #8497cf;
-	--cyan:        #87abc9;
+	--cyan:        #83b5c2;
 	--green:       #a8b67a;
 	--yellow:      #cfa76a;
 	--border1:     #223344;
